# ffmepg_diary

./: .gitignore  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jamestony/ffmpeg_diary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChanel.cpp  AudioChanel.h  AvPacketQueue.cpp  BaseChanel.cpp  BaseChanel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  StephenController.cpp  Version.cpp  VideoChanel.cpp  VideoChanel.h  native-lib.cpp  safequeue.h
app/src/main/cpp/include/: AvPacketQueue.h  Const.h  StephenController.h  androidlog.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/java/com/jamestony/ffmpeg_diary/: MainActivity.kt
app/src/main/java/com/jamestony/ffmpeg_diary/application/: StephenApplication.kt
app/src/main/java/com/jamestony/ffmpeg_diary/player/: SteAudioPlayer.kt  StephenPlayer.kt
app/src/main/java/com/jamestony/ffmpeg_diary/ui/: AudioDecodecActivity.kt  SplashActivity.kt  StephenPlayerActivity.kt  VideoDecodeActivity.kt
app/src/main/java/com/jamestony/ffmpeg_diary/version/: Version.kt
app/src/main/res/layout/: activity_audio_decode.xml  activity_main.xml  activity_splash.xml  activity_stephen_player.xml  activity_video_decode.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/jamestony/ffmpeg_diary/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
